Don't display x-ref data inline when in slides

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -1,3 +1,4 @@
+#set($abSlide = true)
 #set($sessionTable = $sessionData.getTable())
 #set($fields = $sessionTable.getFields())
 #set($referencedTableReports = {})
