Anonymise company: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/development/anonymise_company.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/development/anonymise_company.vm
@@ -31,6 +31,7 @@
   </script>
 </head>
 <body>
+Running on $viewTools.getAppUrl()<p>
 #if(!$viewTools.getAppUrl().contains("gtwmbackup"))
   <div id="results"></div>
 #else
