--- a/gtpb_clientside/WEB-INF/templates/gui/development/anonymise_company.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/development/anonymise_company.vm
@@ -24,15 +24,17 @@
   <title>Anonymise data in an entire company</title>
   <script src="resources/jquery.js" language="Javascript"></script>
   <script src="resources/development/anonymise_company.js" language="Javascript"></script>
+  #if(!$viewTools.getAppUrl().matches("gtwmbackup"))
   <script type="text/javascript">
     $(document).ready(function() {
       anonymiseCompany();
     });
   </script>
+  #end
 </head>
 <body>
 Running on $viewTools.getAppUrl()<p>
-#if(!$viewTools.getAppUrl().contains("gtwmbackup"))
+#if(!$viewTools.getAppUrl().matches("gtwmbackup"))
   <div id="results"></div>
 #else
   Anonymisation can only be run on the test/backup server
