--- a/gtpb_clientside/WEB-INF/templates/gui/development/anonymise_company.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/development/anonymise_company.vm
@@ -24,17 +24,13 @@
   <title>Anonymise data in an entire company</title>
   <script src="resources/jquery.js" language="Javascript"></script>
   <script src="resources/development/anonymise_company.js" language="Javascript"></script>
-  #if(!$viewTools.getAppUrl().matches("gtwmbackup"))
-  <script type="text/javascript">
-    $(document).ready(function() {
-      anonymiseCompany();
-    });
-  </script>
   #end
 </head>
 <body>
 Running on $viewTools.getAppUrl()<p>
 #if(!$viewTools.getAppUrl().matches("gtwmbackup"))
+  #if(!$viewTools.getAppUrl().matches("gtwmbackup"))
+  <button value="Anonymise" id="anonymise" onclick="anonymiseCompany(); this.disabled = true;">Anonymise</button>
   <div id="results"></div>
 #else
   Anonymisation can only be run on the test/backup server
