--- a/gtpb_clientside/website/styles/styles.css
+++ b/gtpb_clientside/website/styles/styles.css
@@ -517,6 +517,10 @@ body {
   float: right;
 }
 
+.attribution a {
+  color: white;
+}
+
 #footer {
 	margin-top:70px;
 	border-top:1px solid white;
