Homepage linkedin icons

--- a/gtpb_clientside/website/styles/styles.css
+++ b/gtpb_clientside/website/styles/styles.css
@@ -521,6 +521,10 @@ body {
   color: white;
 }
 
+.attribution img {
+  float: right;
+}
+
 #footer {
 	margin-top:70px;
 	border-top:1px solid white;
