--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -305,11 +305,11 @@ div#recordUnlock button div small, div#recordUnlock div#staticMessage small
 
 #wordcloud {
   text-align: center;
-  border: 5px dotted #cccccc;
+  /* border: 5px dotted #cccccc;
   -moz-border-radius: 1em;
   -webkit-border-radius: 1em;
   border-radius: 1em;
-  margin: 0.5em;
+  margin: 0.5em; */
 }
 
 /* Match chart headings */
