--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit_nav.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit_nav.vm
@@ -34,6 +34,7 @@
 </head>
 <body style="overflow: visible"> ## override tabs.css
   <div id="breadcrumb"></div>
+  <div id="mini_app_header">#parse("gui/appstore/mini_app_header.vm")</div>
   <div id="levels"></div>
 </body>
 </html>
