--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -4,6 +4,12 @@ body {
   background-color: #dbdbdb; /* 777788, bdbdbd */
 }
 
+#mini_app_header {
+	position:absolute;
+	top:0;
+	right:0;
+}
+
 #mini_links .button {
   float: right;
 }
@@ -12,6 +18,7 @@ body {
   height: 22px;
   width: 22px;
   border: 0;
+  vertical-align: top;
 }
 
 #you_are_here {
