--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
@@ -81,7 +81,7 @@
 					<img src="resources/icons/applications/16x16/Star.png" class="mini_icon">
 				  #end
         #end
-          #if($abSlide && !$linked)<a class="reference_link" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$fieldTable.getInternalTableName()&set_row_id=$rrd_rowId">#end
+          #if($abSlide && !$linked)<a class="reference_link" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$referencedReport.getParentTable().getInternalTableName()&set_row_id=$rrd_reportDataRow.getRowId()">#end
           #if(($printoutSetting == "NAME_AND_VALUE") || ($printoutSetting == "NAME_VALUE_LINEBREAK"))
             <span class="greytext">$reportBaseField:</span>
           #end
