Don't contract sections on slides

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row.vm
@@ -64,7 +64,7 @@
     	#set($rowCount = $rowCount + 1)
       #if($fieldCategory == 'SEPARATOR')
         #set($contracted = false)
-        #if($contractedSections.contains($internalFieldName))
+        #if((!$edit_nav) && $contractedSections.contains($internalFieldName))
           #set($contracted = true)
         #end
       #end
