--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
@@ -81,12 +81,12 @@
 					<img src="resources/icons/applications/16x16/Star.png" class="mini_icon">
 				  #end
         #end
-          #if($abSlide && !$linked)<a class="reference_link" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$referencedReport.getParentTable().getInternalTableName()&set_row_id=$rrd_reportDataRow.getRowId()">#end
+          #if($edit_nav && !$linked)<a class="reference_link" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$referencedReport.getParentTable().getInternalTableName()&set_row_id=$rrd_reportDataRow.getRowId()">#end
           #if(($printoutSetting == "NAME_AND_VALUE") || ($printoutSetting == "NAME_VALUE_LINEBREAK"))
             <span class="greytext">$reportBaseField:</span>
           #end
           $rrd_displayValue<br>
-          #if($abSlide && !$linked)</a> #set($linked = true) #end
+          #if($edit_nav && !$linked)</a> #set($linked = true) #end
 			  #end
 			#elseif($partFieldCategory == "FILE")
         	  #set($rrd_displayValue = $rrd_reportDataRow.getValue($reportBaseField).getDisplayValue())
@@ -95,9 +95,9 @@
 				#if($fileValue.isImage())
 			      #set($downloadBase = "uploads/$reportBaseField.getTableContainingField().getInternalTableName()/$reportBaseField.getInternalFieldName()/$rrd_reportDataRow.getRowId()/")
 			      #set($downloadUrl = $viewTools.escapeForURL("$downloadBase$fileValue"))
-			      #if(!$abSlide)<a href="$downloadUrl" target="_blank">#end
+			      #if(!$edit_nav)<a href="$downloadUrl" target="_blank">#end
 				    <img border="0" src="$downloadUrl.40.$fileValue.getExtension()" class="cross_reference_image" />
-			      #if(!$abSlide)</a>#end
+			      #if(!$edit_nav)</a>#end
 				#end
 			  #end
 		    #end
