Slide control buttons

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -89,6 +89,10 @@
           #end
         </div>
       </section> 
-    </div>  
+      <div class="slide_controls">
+        <button name="delete" internaltablename="$sessionTable.getInternalTableName()" rowid="$sessionData.getRowId()">delete</button>
+        <button name="print" >print</button>
+      </div>
+    </div> <!-- slide --> 
   </div> <!-- slides --> 
 </div> <!-- presentation --> 
