--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -340,10 +340,11 @@ a.jumpto_table.current {
   width: 100%;
   border-top: 1px solid #ff8040;
   text-align: center;
+  background-color: white;
 }
 
 .slide_controls button {
-	margin: 0;
+	margin-top: 1em;
   margin-left: 5em;
   margin-right: 5em;
 }
