--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -343,17 +343,18 @@ a.jumpto_table.current {
   background-color: white;
 }
 
+.slide_controls .button_group {
+  margin-left: 1em;
+}
+
 .slide_controls button {
+	margin: 0;
 	margin-top: 1em;
-  margin-left: 5em;
-  margin-right: 5em;
 }
 
 .slide_controls button img {
   vertical-align: middle;
 }
-
-.sli
 
 .this_table {
   width: 70%;
