--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -345,11 +345,13 @@ a.jumpto_table.current {
 
 .slide_controls .button_group {
   margin-left: 1em;
+  position: relative;
+  top: 0;
 }
 
 .slide_controls button {
 	margin: 0;
-	margin-top: 1em;
+	margin-top: 0.5em;
 }
 
 .slide_controls button img {
