--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -1,5 +1,6 @@
 #set($edit_nav = true)
 #set($sessionTable = $sessionData.getTable())
+#set($internalTableName = $sessionTable.getInternalTableName())
 #set($fields = $sessionTable.getFields())
 #set($referencedTableReports = {})
 #foreach($field in $fields)
@@ -91,12 +92,12 @@
       </section> 
       <div class="slide_controls">
         <div class="button_group">
-          <button name="new" ><img src="resources/toolbar/new.png" /> new</button>
-          <button name="clone" ><img src="resources/toolbar/clone.png" /> clone</button>
-          <button name="delete" internaltablename="$sessionTable.getInternalTableName()" rowid="$sessionData.getRowId()"><img src="resources/toolbar/delete.png" /> delete</button>
+          <button name="new" id="control_new" internaltablename="$internalTableName"><img src="resources/toolbar/new.png" /> new</button>
+          <button name="clone" id="control_clone" internaltablename="$internalTableName"><img src="resources/toolbar/clone.png" /> clone</button>
+          <button name="delete" id="control_delete" internaltablename="$internalTableName" rowid="$sessionData.getRowId()"><img src="resources/toolbar/delete.png" /> delete</button>
         </div>
         <div class="button_group">
-          <button name="print" ><img src="resources/toolbar/print_only.png" /> print</button>
+          <button name="print" id="control_print" internaltablename="$sessionTable.getInternalTableName()"><img src="resources/toolbar/print_only.png" /> print</button>
         </div>
       </div>
     </div> <!-- slide --> 
