Don't put new buttons next to relations, it's confusing

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
@@ -36,7 +36,7 @@
 	#end
     #set($filter = $viewTools.getNewFilterMap())
     #set($success = $filter.put($primaryKey, "$rrd_rowId"))
-    #set($rrd_reportDataRows = $view.getReportDataRows($referencedReport, 20, $filter, true))
+    #set($rrd_reportDataRows = $view.getReportDataRows($referencedReport, 10, $filter, true)) ## return 10 records max.
     #foreach($rrd_reportDataRow in $rrd_reportDataRows)
       #set($rowContainsData = false)
       #set($linked = false)
