--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -197,11 +197,11 @@ div.tab_content table#reportData tbody tr.rowb[forcehighlight=true]:hover td {
 }
 
 .reportDataView .related {
-  color: #666666;
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e6e7ea)); /* for webkit browsers */
-  background: -moz-linear-gradient(top,  #fff,  #e6e7ea); /* for firefox 3.6+ */
-  background: -ms-linear-gradient(top,  #fff,  #e6e7ea);
-  background: linear-gradient(top,  #fff,  #e6e7ea);
+  color: #888888;
+  /* background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e6e7ea)); /* for webkit browsers */
+  /* background: -moz-linear-gradient(top,  #fff,  #e6e7ea); /* for firefox 3.6+ */
+  /* background: -ms-linear-gradient(top,  #fff,  #e6e7ea); */
+  /* background: linear-gradient(top,  #fff,  #e6e7ea); */
   padding: 1em;
   margin: 5px;
   border: solid 1px #b4b4b4;
