--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/view.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/view.vm
@@ -52,7 +52,6 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/view")
     #set($colSplit = $colSplit + 1)
   #end
 	<div class="reportDataView"><div id="leftcol" #if($numTables == 1) style="width: 100%" #end>
-	  ## NB: session table data used to be here
 		## Show related data
 		#foreach($reportField in $sessionReport.getReportFields())
 		  ## don't show fields we've already shown
@@ -83,72 +82,73 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/view")
 			  #set($headingDisplayed = false)
 			  #if ($numRelatedRows > 0)
 	 	      ## attempt to only display related data if it's a managable amount
-		       #if(($numRelatedRows == 1) || (($numRelatedRows * ($reportFieldTable.getFields().size() - 1)) < 30))
+          #if(($numRelatedRows == 1) || (($numRelatedRows * ($reportFieldTable.getFields().size() - 1)) < 30))
 		        #foreach($relatedRowId in $relatedRowIds)
-		         #set($tableDataRow=$view.getTableDataRow($reportFieldTable, $relatedRowId))
-		         #if ($tableDataRow.size() > 0)
-				   #if(($numRelatedRows == 1) || (!$headingDisplayed))
-					   #set($headingDisplayed = true)
-             <h1>$reportFieldTable.getSimpleName()</h1>
-					#end
-					#set($rowCount = 0)
-					#set($address = $viewTools.getAddress($tableDataRow))
-          #set($fields = $reportFieldTable.getFields())
-          #foreach($field in $fields)
-        	  #set($tableDataValue = $tableDataRow.get($field))
-					  #set($fieldCategory = $field.getFieldCategory())
-      		  ## don't display hidden or blank fields
-      		  #if($fieldCategory=="REFERENCED_REPORT_DATA" || $fieldCategory=="SEPARATOR" || (($field.getHidden() == false) && (!($tableDataValue.toString() == ''))))
-              ## don't display checkbox values that are false
-              #if(!(($tableDataValue.getClass().getSimpleName().equals("CheckboxValueDefn")) && ($tableDataValue.toString() == "false")))
-                #if($fieldCategory == "RELATION")
-                  #set($fieldEncountered = $field.getDisplayField())
-                #else
-                  #set($fieldEncountered = $field)
-                #end
-                #if((!$fieldsEncountered.containsKey($fieldEncountered)) && ($field.getPrintoutSetting().name() != "NO_PRINTOUT"))
-                  #set($rrd_rowId = $relatedRowId) ## For use by input/referenced_report_data.vm
-                  #parse("gui/reports_and_tables/tabs/table_data_row_view.vm")
-                  #if($numRelatedRows == 1)
-                    #set($success = $fieldsEncountered.put($fieldEncountered, true))
+		          #set($tableDataRow=$view.getTableDataRow($reportFieldTable, $relatedRowId))
+		          #if ($tableDataRow.size() > 0)
+				        #if(($numRelatedRows == 1) || (!$headingDisplayed))
+					        #set($headingDisplayed = true)
+                  <h1>$reportFieldTable.getSimpleName()</h1>
+					      #end
+                #set($rowCount = 0)
+      					#set($address = $viewTools.getAddress($tableDataRow))
+                #set($fields = $reportFieldTable.getFields())
+                #foreach($field in $fields)
+              	  #set($tableDataValue = $tableDataRow.get($field))
+      					  #set($fieldCategory = $field.getFieldCategory())
+            		  ## don't display hidden or blank fields
+            		  #if($fieldCategory=="REFERENCED_REPORT_DATA" || $fieldCategory=="SEPARATOR" || (($field.getHidden() == false) && (!($tableDataValue.toString() == ''))))
+                    ## don't display checkbox values that are false
+                    #if(!(($tableDataValue.getClass().getSimpleName().equals("CheckboxValueDefn")) && ($tableDataValue.toString() == "false")))
+                      #if($fieldCategory == "RELATION")
+                        #set($fieldEncountered = $field.getDisplayField())
+                      #else
+                        #set($fieldEncountered = $field)
+                      #end
+                      #if((!$fieldsEncountered.containsKey($fieldEncountered)) && ($field.getPrintoutSetting().name() != "NO_PRINTOUT"))
+                        #set($rrd_rowId = $relatedRowId) ## For use by input/referenced_report_data.vm
+                        #parse("gui/reports_and_tables/tabs/table_data_row_view.vm")
+                        #if($numRelatedRows == 1)
+                          #set($success = $fieldsEncountered.put($fieldEncountered, true))
+                        #end
+                      #end
+                    #end
                   #end
-                #end
-              #end
-            #end
-          #end ## end foreach field in table
-					## Display calculations if there are any in the current report
-					#if($reportFieldTable.equals($sessionTable))
-          		#set($calculationReportFields = [])
-          		#foreach($reportField in $sessionReport.getReportFields())
-          		  #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
-          			#set($success = $calculationReportFields.add($reportField))
-          		  #end
-          		#end
-          		#if($calculationReportFields.size() > 0)
-          		  #set($reportFilter = $viewTools.getNewFilterMap())
-          		  #set($success = $reportFilter.put($sessionTable.getPrimaryKey(),"$sessionRowId"))
-			          ## Note: limit to 1 row for now. There may be more than one row returned, deal with that later if necessary
-          		  #set($reportDataRows = $view.getReportDataRows($sessionReport, 1, $reportFilter, true))
-          			<div class="calculations">
-          			  #foreach($reportDataRow in $reportDataRows)
-          				#foreach($calcField in $calculationReportFields)
-          				  <span class="greytext capitalised">$calcField: </span>
-          				  $reportDataRow.getValue($calcField.getBaseField())<br>
-          				#end
-                  #end
-                </div>
-          		#end ## End of calculations display
-					#end
-		         #end ## end if ($tableDataRow.size() != 0)
+                #end ## end foreach field in table
+      					## Display calculations if there are any in the current report
+      					#if($reportFieldTable.equals($sessionTable))
+              		#set($calculationReportFields = [])
+              		#foreach($reportField in $sessionReport.getReportFields())
+              		  #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
+              			#set($success = $calculationReportFields.add($reportField))
+              		  #end
+              		#end
+              		#if($calculationReportFields.size() > 0)
+              		  #set($reportFilter = $viewTools.getNewFilterMap())
+              		  #set($success = $reportFilter.put($sessionTable.getPrimaryKey(),"$sessionRowId"))
+    			          ## Note: limit to 1 row for now. There may be more than one row returned, deal with that later if necessary
+              		  #set($reportDataRows = $view.getReportDataRows($sessionReport, 1, $reportFilter, true))
+              			<div class="calculations">
+              			  #foreach($reportDataRow in $reportDataRows)
+              				#foreach($calcField in $calculationReportFields)
+              				  <span class="greytext capitalised">$calcField: </span>
+              				  $reportDataRow.getValue($calcField.getBaseField())<br>
+              				#end
+                      #end
+                    </div>
+              		#end ## End of calculations display
+      					#end
+		          #end ## end if ($tableDataRow.size() != 0)
 		        #end ## end foreach related row id
-		       #else
-		   #set($rowCount = $rowCount+1)
+          #else
+		        #set($rowCount = $rowCount+1)
+            #if($numRelatedRows > 0)There are $numRelatedRows related $reportFieldTable.getSimpleName() records#end
 ##             <td>$numRelatedRows related records</td>
 ##             <td>#if($numRelatedRows > 0)not shown #else &nbsp; #end</td>
-		       #end ## end if number of related rows is a manageable amount
-           #if($related || $current) </div> #set($related = false) #set($current = false) #end
-		      #end
-		    #end
+          #end ## end if number of related rows is a manageable amount
+          #if($related || $current) </div> #set($related = false) #set($current = false) #end
+        #end
+      #end
 		#end
   </div></div>
 #end
