Show something in view tab boxes when there are no related records or many: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/view.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/view.vm
@@ -151,6 +151,8 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/view")
         #else
           Debug: here
         #end
+      #else
+        Debug: here 2
       #end
 		#end
   </div></div>
