--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/view.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/view.vm
@@ -141,15 +141,18 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/view")
 		          #end ## end if ($tableDataRow.size() != 0)
 		        #end ## end foreach related row id
           #else
+            ## Too many records to display
 		        #set($rowCount = $rowCount+1)
-            Debug: $numRelatedRows related records
-            #if($numRelatedRows > 0)There are $numRelatedRows related $reportFieldTable.getSimpleName() records#end
-##             <td>$numRelatedRows related records</td>
-##             <td>#if($numRelatedRows > 0)not shown #else &nbsp; #end</td>
-            #end ## end if number of related rows is a manageable amount
-            #if($related || $current) Ending div</div> #set($related = false) #set($current = false) #end
+            There are $numRelatedRows related $reportFieldTable.getSimpleName() records
+          #end ## end if number of related rows is a manageable amount
+          #if($related || $current)
+            #if($numRelatedRows == 0) No $reportFieldTable.getSimpleName() attached #end
+            </div>
+            #set($related = false)
+            #set($current = false)
           #end
         #end
+      #end
 		#end
   </div></div>
 #end
