Show something in view tab boxes when there are no related records or many: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/view.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/view.vm
@@ -146,6 +146,7 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/view")
             There are $numRelatedRows related $reportFieldTable.getSimpleName() records
           #end ## end if number of related rows is a manageable amount
           #if($related || $current)
+            Debug: $numRelatedRows related rows
             #if($numRelatedRows == 0) No $reportFieldTable.getSimpleName() attached #end
             </div>
             #set($related = false)
