Show something in view tab boxes when there are no related records or many: style

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/view.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/view.vm
@@ -146,13 +146,12 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/view")
             There are $numRelatedRows related $reportFieldTable.getSimpleName() records
           #end ## end if number of related rows is a manageable amount
           #if($related || $current)
-            #if($numRelatedRows == 0) No $reportFieldTable.getSimpleName() attached #end
             </div>
             #set($related = false)
             #set($current = false)
           #end
         #else
-          No $reportFieldTable.getSimpleName() attached
+          <div class="related">No $reportFieldTable.getSimpleName() attached</div>
         #end
       #end
 		#end
