Change content on relation change in slide

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/relation_snippet.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/relation_snippet.vm
@@ -1,3 +1,6 @@
+#if(!$field)
+  #set($field = $sessionData.getCustomField("relation_snippet_field"))
+#end
 #set($relatedTable = $field.getRelatedTable())
 #set($relatedRowIdValue = $tableDataRow.get($field.getRelatedField()))
 #set($snippet = "")
