Change content on relation change in slide: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/relation_snippet.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/relation_snippet.vm
@@ -3,6 +3,7 @@
 #set($snippet = "")
 #set($active = false)
 #set($fieldDisplayValue = "")
+#set($snippet = "")
 #if(!$relatedRowIdValue.isNull())
   #set($relatedRowId = $relatedRowIdValue.getValueInteger())
   #if($relatedRowId)
