Change content on relation change in slide: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/relation_snippet_direct.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/relation_snippet_direct.vm
@@ -3,6 +3,7 @@
 #set($relatedTable = $field.getRelatedTable())
 #set($relatedRowId = $sessionData.getRowId($relatedTable))
 #set($relatedDataRow = $view.getTableDataRow($relatedTable, $relatedRowId))
+#set($snippet = "")
 #set($fieldDisplayValue = $relatedDataRow.get($field.getDisplayField()))##
 #foreach($relatedField in $relatedDataRow.keySet())
   #if(!$relatedField.equals($relatedField.getTableContainingField().getPrimaryKey()))
