--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slides.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slides.vm
@@ -1,4 +1,5 @@
 #set($sessionTable = $sessionData.getTable())
+#set($internalTableName = $sessionTable.getInternalTableName())
 #set($primaryKey = $sessionTable.getPrimaryKey())
 #set($sessionRowId = $sessionData.getRowId())
 #set($referencedTableReports = {})
