--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -1,6 +1,7 @@
 #set($edit_nav = true)
 #set($sessionTable = $sessionData.getTable())
 #set($internalTableName = $sessionTable.getInternalTableName())
+#set($rowId = $sessionData.getRowId())
 #set($fields = $sessionTable.getFields())
 #set($referencedTableReports = {})
 #foreach($field in $fields)
@@ -39,7 +40,7 @@
               #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA", $dependentTable))
                 #foreach($report in $dependentTable.getReports())
                   #if(($view.loggedInUserAllowedToViewReport($report)) && ($report.getReportBaseFields().contains($primaryKey)) && (!$report.getReportName().contains("dbvcalc")) && (!$report.getReportName().contains("dbvcrit")))
-                    <div class="dependent_table" id="dependent_table_$sessionTable.getInternalTableName()_$dependentTable.getInternalTableName()">
+                    <div class="dependent_table" id="dependent_table_$internalTableName_$dependentTable.getInternalTableName()_$rowId">
                       <h1><span class="count"></span>$dependentTable.getSimpleName()</h1>
                       <div class="record_snippets">
                       </div>
@@ -55,7 +56,7 @@
             #if($field.getFieldCategory() == "REFERENCED_REPORT_DATA")
               #set($referencedReport = $field.getReferencedReport())
               #set($referencedTable = $referencedReport.getParentTable())
-              <div class="dependent_table cross_reference" id="dependent_table_$sessionTable.getInternalTableName()_$referencedTable.getInternalTableName()">
+              <div class="dependent_table cross_reference" id="dependent_table_$internalTableName_$referencedTable.getInternalTableName()_$rowId">
                 <h1><span class="count"></span>$field</h1>
                 <div class="record_snippets">
                 </div>
@@ -67,11 +68,11 @@
       <div class="slide_controls">
         <div class="button_group">
           <button name="new" id="control_new" internaltablename="$internalTableName"><img src="resources/toolbar/new.png" /> new</button>
-          <button name="clone" id="control_clone" internaltablename="$internalTableName" rowid="$sessionData.getRowId()"><img src="resources/toolbar/clone.png" /> clone</button>
-          <button name="delete" id="control_delete" internaltablename="$internalTableName" rowid="$sessionData.getRowId()"><img src="resources/toolbar/delete.png" /> delete</button>
+          <button name="clone" id="control_clone" internaltablename="$internalTableName" rowid="$rowId"><img src="resources/toolbar/clone.png" /> clone</button>
+          <button name="delete" id="control_delete" internaltablename="$internalTableName" rowid="$rowId"><img src="resources/toolbar/delete.png" /> delete</button>
         </div>
         <div class="button_group">
-          <button name="print" id="control_print" internaltablename="$sessionTable.getInternalTableName()" rowid="$sessionData.getRowId()"><img src="resources/toolbar/print_only.png" /> print</button>
+          <button name="print" id="control_print" internaltablename="$internalTableName" rowid="$rowId"><img src="resources/toolbar/print_only.png" /> print</button>
         </div>
       </div>
     </div> <!-- slide --> 
